[package]
name = "parser_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.6"
pest_derive = "2.6"
nom = "7.1.3"
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
structopt = "0.3.26"